--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.zorroa</groupId>
     <artifactId>analyst</artifactId>
     <version>0.17.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
