--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -8,8 +8,8 @@ zorroa.common.index.alias=archivist
 
 analyst.index.data=true
 
-analyst.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-analyst.filesystem.location = storage
+zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+zorroa.filesystem.root = storage
 
 server.port = 8099
 server.ssl.enabled = true
