--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.zorroa</groupId>
   <artifactId>archivist</artifactId>
   <version>0.17.0</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>zorroa-archivist</name>
   <description>Zorroa Platform Application Server</description>
