--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+info.build.project=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
 
 # Number of threads to use for asset executors
 analyst.executor.threads = -1
@@ -6,10 +9,13 @@ analyst.master.host = https://127.0.0.1:8066
 
 zorroa.common.index.alias=archivist
 
+zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
+zorroa.filesystem.root = ${analyst.path.home}/storage
+
 analyst.index.data=true
 
-zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-zorroa.filesystem.root = storage
+analyst.path.home=.
+analyst.path.index=${analyst.path.home}/index
 
 server.port = 8099
 server.ssl.enabled = true
