--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>com.zorroa.analyst.Application</start-class>
         <java.version>1.8</java.version>
         <com.zorroa.appDir>"/Library/Application Support/Zorroa"</com.zorroa.appDir>
@@ -251,7 +251,7 @@
                         </goals>
                         <configuration>
                             <executable>/bin/rm</executable>
-                            <commandlineArgs>-rf data storage</commandlineArgs>
+                            <commandlineArgs>-rf index storage</commandlineArgs>
                         </configuration>
                     </execution>
 
