--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -13,9 +13,9 @@ zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
 zorroa.filesystem.root = ${analyst.path.home}/storage
 
 analyst.index.data=true
-
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/index
+analyst.path.models=${analyst.path.home}/models
 
 server.port = 8099
 server.ssl.enabled = true
