--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -47,9 +47,6 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
-zorroa.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
-zorroa.filesystem.root = ${archivist.path.home}/storage
-
 archivist.security.hmacStore=/tmp
 
 archivist.events.port=8087
@@ -58,6 +55,7 @@ archivist.proxies.format=jpg
 
 archivist.ingest.ingestWorkers=2
 archivist.ingest.defaultAssetWorkers=2
+archivist.ingest.batchSize=5
 
 archivist.export.autoStart=true
 archivist.export.basePath=exports
