--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -10,12 +10,12 @@ server.port=8066
 server.session.timeout=3000
 
 server.ssl.enabled = true
-server.ssl.key-store = keystore.p12
+server.ssl.key-store = classpath:keystore.p12
 server.ssl.key-store-password = zorroa
 server.ssl.key-password = zorroa
 server.ssl.key-store-type = PKCS12
 server.ssl.key-alias = zorroa
-server.ssl.trust-store = truststore.p12
+server.ssl.trust-store = classpath:truststore.p12
 server.ssl.trust-store-password = zorroa
 
 server.ssl.trust-store-type = PKCS12
