--- a/Archivist/src/main/resources/application.properties
+++ b/Archivist/src/main/resources/application.properties
@@ -35,6 +35,7 @@ spring.jackson.serialization-inclusion:non_null
 
 # Common Archivist/Analyst Settings.
 zorroa.common.index.alias=archivist
+zorroa.common.index.port=9401
 
 # Archivist Settings
 #
