--- a/Analyst/src/main/resources/application.properties
+++ b/Analyst/src/main/resources/application.properties
@@ -10,6 +10,7 @@ analyst.executor.threads = -1
 analyst.master.host = https://127.0.0.1:8066
 
 zorroa.common.index.alias=archivist
+zorroa.common.index.port=9401
 
 analyst.filesystem.class = com.zorroa.archivist.sdk.filesystem.UUIDFileSystem
 analyst.filesystem.root = ${analyst.path.home}/storage
