--- a/ArchivistCommon/pom.xml
+++ b/ArchivistCommon/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>spring-tx</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-dao</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>archivist-sdk</artifactId>
             <version>0.18.0</version>
